# DeltaRobot

./: .gitignore  DEVELOPER_GUIDE.md  MATLAB_BRIDGE_GUIDE.md  PROGRESS.md  PROGRESSION_REPORT.md  README.md  appendix_c_code_listings.txt  calibrate_place.py  camera_diagrams.drawio  dataflow.dot  delta_blind_pick_place_sim.m  delta_robot_stateflow_gen.m  diagrams.drawio  error_map.json  make_pdf.py  make_transform_diagram.py  measure_error_grid.py  requirements.txt  sim2_weed_detection_pos_camera_stateMachine.slx  tune_ee_offset.py
diagrams/: dataflow.drawio  dataflowV2.drawio  diagramsV2.drawio  diagramsV2rawio  diagramsV2rawio.drawio  stateflow.dot
experiment_results/: repeatability_20260512_130728.csv  repeatability_20260512_130728_timeline.csv  repeatability_20260512_132822.csv  repeatability_20260512_132822_timeline.csv  workspace_sweep_20260512_134200.csv  workspace_sweep_20260512_150850.csv
matlab/: delta_ik.m  delta_ik_node.m  setup_msgs.m
src/can_driver/can_driver/: setup.py
src/can_driver/can_driver/can_driver/: can_driver.py
src/can_driver/custom_messages/: CMakeLists.txt  package.xml
src/can_driver/custom_messages/msg/: DeltaJointAngles.msg  DeltaTarget.msg  DigitalAndAnalogFeedback.msg
src/delta_camera_system/: package.xml  setup.cfg  setup.py
src/delta_camera_system/delta_camera_system/: calibrate_plane_homography.py  calibrate_transform.py  camera_system.py  realsense_publisher.py
src/delta_camera_system/examples/: camera_base_pairs.example.json  plane_homography_pairs.example.json
src/delta_camera_system/launch/: camera_system.launch.py
src/delta_common/: package.xml  setup.cfg  setup.py
src/delta_common/delta_common/: config.py  error_map.py  fk_ik.py  trajectory.py
src/delta_main_app/: package.xml  setup.cfg  setup.py
src/delta_main_app/delta_main_app/: analyze_repeatability.py  belt_predictor.py  blind_pick_place.py  laser_accuracy_experiment.py  laser_preview.py  main_app.py  matlab_bridge_node.py  pick_place_ui.py  repeatability_test.py  workspace_accuracy_sweep.py
src/delta_main_app/launch/: blind_pick_place.launch.py  delta_main.launch.py  matlab_bridge.launch.py
src/delta_motor_controller/: package.xml  setup.cfg  setup.py
src/delta_motor_controller/delta_motor_controller/: motor_calibration_gui.py  motor_controller.py  pneumatic_gripper.py  testing_solenoid.py  valve_can_node.py
src/delta_motor_controller/test/: test_valve_can_node.py
src/python/examples/: advanced_control.py
src/python/src/: PP43M.py  advanced_control.py  basic_usage.py  delta_ik_mit_fk_safety.py  delta_mit_3motor_controller.py  fk_ik.py  nha_pub_3motor.py  nha_sub_3motor.py  position.py  position_control.py  position_control_shared.py  read_position.py  speed_control.py
src/realsense_yolo_detector/: package.xml  setup.cfg  setup.py
src/realsense_yolo_detector/realsense_yolo_detector/: delta_vision_ik_test.py  detect_center_only.py  fk_ik.py  yolo_detector_node.py
src/rob_and_ros_pkg/: package.xml  setup.cfg  setup.py
src/rob_and_ros_pkg/examples/: basic_usage.py
src/rob_and_ros_pkg/rob_and_ros_pkg/: mit_motor_node.py  motor_pub_node.py  motor_sub_node.py  rob_n_ros.py  robstride_controller.py  simple_pub_node.py  simple_sub_node.py
src/rob_and_ros_pkg/src/: Delta_description.py  PP43M.py  RobstrideBus.py  ZinII.py  basic_bus_frame.py  fk_ik.py  fk_ik_test.py  position.py  readSingleMOTOR.py  sim_sub.py
src/sim4_ros2_delta/: CMakeLists.txt  package.xml  packageInfo.mat
src/sim4_ros2_delta/include/sim4_ros2_delta/: MW_custom_RTOS_header.h  ext_mode_types.h  multiword_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  sim4_ROS2_delta.h  sim4_ROS2_delta_private.h  sim4_ROS2_delta_types.h  slros2_initialize.h  slros_busmsg_conversion.cpp  visibility_control.h
src/sim4_ros2_delta/src/: main.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  rtiostream_tcpip.c  sim4_ROS2_delta.cpp  slros2_initialize.cpp  xcp.c  xcp_calibration.c  xcp_daq.c  xcp_drv_rtiostream.c  xcp_ext_classic_trigger.c  xcp_ext_common.c  xcp_ext_mode.c  xcp_ext_param_default_tcp.c  xcp_fifo.c  xcp_frame_tcp.c  xcp_mem_default.c  xcp_platform_default.c  xcp_standard.c  xcp_transport.c  xcp_utils.c
src/testing_can/: package.xml  setup.cfg  setup.py
src/testing_can/testing_can/: Dribbling_control.py  Testing_relay.py  read_data_from_encoder.py  testing_solenoid.py
thesis_extracted/: main.tex
thesis_extracted/Main-pages/: 1_ACKNOWLEDGEMENTS.tex  2_Sekdeisokeb.tex  3_ABSTRACT.tex  4_NOMENCLATURE.tex  appendix1.tex  appendix2.tex  appendix3.tex  ch1_Introduction.tex  ch2_LiteratureReview.tex  ch3_Methodology.tex  ch4_Results_Discussion.tex  ch5_Conclusions.tex  ch6_References.tex  mybib.bib
