<?xml version="1.0"?>
<package format="3">
  <name>delta_main_app</name>
  <version>0.0.0</version>
  <description>Delta robot main integration app</description>

  <maintainer email="s4mb4th@todo.todo">s4mb4th</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>delta_common</exec_depend>
  <exec_depend>delta_camera_system</exec_depend>
  <exec_depend>delta_motor_controller</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>