cmake_minimum_required(VERSION 3.5)
project(sim4_ros2_delta)
set(CMAKE_VERBOSE_MAKEFILE ON)
# Set CMAKE_BUILD_TYPE
set(CMAKE_BUILD_TYPE Debug)
set(MW_TOP_LEVEL_PROJECT_NAME ${PROJECT_NAME})
# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()
# Default to C++17
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()
if(ALIAS_ROS2_TF2)
  add_definitions(-Dtf2=ros2_tf2)
  add_definitions(-Dtf2_ros=ros2_tf2_ros)
  add_definitions(-Dmessage_filters=ros2_message_filters)
endif()
# Check the ROS 2 distribution and define a macro
if("$ENV{ROS_DISTRO}" STREQUAL "humble")
    message(STATUS "Building for ROS 2 Humble")
    add_definitions(-DROS2_DISTRO_HUMBLE)
elseif("$ENV{ROS_DISTRO}" STREQUAL "jazzy")
    message(STATUS "Building for ROS 2 Jazzy")
    add_definitions(-DROS2_DISTRO_JAZZY)
else()
    message(WARNING "ROS 2 distribution $ENV{ROS_DISTRO} is not recommended for this MATLAB version. Use 'ROS 2 Jazzy' for this MATLAB version.")
    message(WARNING "Building for ROS 2 Jazzy")
    add_definitions(-DROS2_DISTRO_JAZZY)
endif()
# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_ros REQUIRED)
find_package( custom_messages REQUIRED)
find_package( geometry_msgs REQUIRED)
find_package( rclcpp REQUIRED)
# Add package include directories
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include/sim4_ros2_delta")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/rtiostream/src")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/ext_mode/include")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/ext_mode/src")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/server/common")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/server/include")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/server/platform/default")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/server/platform/include")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/server/protocol/include")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/server/protocol/src")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/server/transport/include")
include_directories("include/sim4_ros2_delta/matlab/toolbox/coder/xcp/src/target/server/transport/src")
set (CMAKE_SKIP_BUILD_RPATH false)
set (CMAKE_BUILD_WITH_INSTALL_RPATH true)
set (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
set (CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
# Node
add_executable(sim4_ROS2_delta 
src/rtiostream_tcpip.c
src/xcp_ext_classic_trigger.c
src/xcp_ext_common.c
src/xcp_ext_mode.c
src/xcp_ext_param_default_tcp.c
src/xcp_utils.c
src/xcp_drv_rtiostream.c
src/xcp_mem_default.c
src/xcp_platform_default.c
src/xcp.c
src/xcp_calibration.c
src/xcp_daq.c
src/xcp_standard.c
src/xcp_fifo.c
src/xcp_frame_tcp.c
src/xcp_transport.c
src/slros2_multi_threaded_executor.cpp
src/main.cpp
src/ros2nodeinterface.cpp
src/rtGetInf.cpp
src/rtGetNaN.cpp
src/rt_nonfinite.cpp
src/sim4_ROS2_delta.cpp
src/slros2_initialize.cpp
)
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
target_compile_options(sim4_ROS2_delta PUBLIC 
  $<$<OR:$<COMPILE_LANGUAGE:CXX>,$<COMPILE_LANGUAGE:C>>:
  -Wall -Wextra -Wpedantic
  >)
endif()
target_compile_options(sim4_ROS2_delta PRIVATE
  $<$<OR:$<COMPILE_LANGUAGE:CXX>,$<COMPILE_LANGUAGE:C>>:
  -DMODEL=sim4_ROS2_delta
  -DNUMST=1
  -DNCSTATES=0
  -DHAVESTDIO
  -DMODEL_HAS_DYNAMICALLY_LOADED_SFCNS=0
  -DXCP_DAQ_SUPPORT
  -DXCP_CALIBRATION_SUPPORT
  -DXCP_TIMESTAMP_SUPPORT
  -DXCP_TIMESTAMP_BASED_ON_SIMULATION_TIME
  -DXCP_SET_MTA_SUPPORT
  -DEXTMODE_XCP_TRIGGER_SUPPORT
  -DINTERNAL_XCP_MEM_BLOCK_1_SIZE=128
  -DINTERNAL_XCP_MEM_BLOCK_1_NUMBER=1
  -DINTERNAL_XCP_MEM_BLOCK_2_SIZE=168
  -DINTERNAL_XCP_MEM_BLOCK_2_NUMBER=4
  -DINTERNAL_XCP_MEM_BLOCK_3_SIZE=96
  -DINTERNAL_XCP_MEM_BLOCK_3_NUMBER=4
  -DINTERNAL_XCP_MEM_RESERVED_POOLS_TOTAL_SIZE=1000670
  -DINTERNAL_XCP_MEM_RESERVED_POOLS_NUMBER=5
  -DXCP_MEM_DAQ_RESERVED_POOL_BLOCKS_NUMBER=3
  -DXCP_MEM_DAQ_RESERVED_POOLS_NUMBER=1
  -DXCP_MIN_EVENT_NO_RESERVED_POOL=1
  -DXCP_MAX_CTO_SIZE=255
  -DXCP_MAX_DTO_SIZE=65532
  -DXCP_MAX_ODT_ENTRY_SIZE=255
  -DEXTMODE_STATIC
  -DEXTMODE_STATIC_SIZE=1000000
  -DON_TARGET_WAIT_FOR_START=1
  -DCLASSIC_INTERFACE=0
  -DALLOCATIONFCN=0
  -DTID01EQ=0
  -DTERMFCN=1
  -DONESTEPFCN=1
  -DMAT_FILE=0
  -DMULTI_INSTANCE_CODE=0
  -DEXT_MODE=1
  -DINTEGER_CODE=0
  -DMT=0
  -DROS2_PROJECT
  -DSTACK_SIZE=64
  -D__MW_TARGET_USE_HARDWARE_RESOURCES_H__
  -D__linux__
  -DRT=RT
  -fpermissive  >
  )
ament_target_dependencies(
  sim4_ROS2_delta
  "custom_messages"
  "geometry_msgs"
  "rclcpp"
)
target_include_directories(sim4_ROS2_delta PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_link_libraries(sim4_ROS2_delta 
	${CMAKE_DL_LIBS}
    )
install(TARGETS sim4_ROS2_delta
  EXPORT export_${PROJECT_NAME}
  DESTINATION lib/${PROJECT_NAME})
ament_export_include_directories(
  include
)
foreach(file_i ${CUDA_BINS})
add_custom_command(
                   TARGET sim4_ROS2_delta
                   POST_BUILD
                   COMMAND ${CMAKE_COMMAND}
                   ARGS -E copy ${PROJECT_SOURCE_DIR}/src/${file_i} ${CMAKE_INSTALL_PREFIX}/sim4_ROS2_delta_ert_rtw/${file_i}
				   )
add_custom_command(
                   TARGET sim4_ROS2_delta
                   POST_BUILD
                   COMMAND ${CMAKE_COMMAND}
                   ARGS -E copy ${PROJECT_SOURCE_DIR}/src/${file_i} ${CMAKE_INSTALL_PREFIX}/codegen/exe/sim4_ROS2_delta/${file_i}
				   )				   
endforeach(file_i)
ament_package()
# Generated on Thu Jul 02 13:42:11 2026
